@@ -311,6 +311,11 @@ Deprecation
       Cluster hosts running with dual native ports were not correctly identified in the system.peers tables and server-sent EVENTs,
       causing clients that encrypt traffic to fail to maintain correct connection pools. For more information, see CASSANDRA-19392.
     - Deprecated `use_deterministic_table_id` in cassandra.yaml. Table IDs may still be supplied explicitly on CREATE.
+    - Chronicle Queue has changed the enums used for log rolling (cassandra.yaml -> full_query_logging_options:roll_cycle).
+    Older legacy options will still work for the foreseeable future but you will see warnings in logs and future dependency
+    upgrades may break your log rolling param. The default log rolling param will be changed with the next major release
+    from HOURLY to FAST_HOURLY, primarily different on how frequently indexes are built (256 in FAST_HOURLY vs. 16 in HOURLY).
+    For more info refer to: net.openhft.chronicle.queue.RollCycles
 
 4.1
 ===
